# GameEngineTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindSDL2_IMAGE.cmake
main/: CMakeLists.txt  main.cpp
shared/: CMakeLists.txt  lib.cpp  lib.hpp  lib_main.cpp  lib_main.hpp
tests/: CMakeLists.txt
tests/src/: sum_test.cpp
